--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,10 +50,20 @@ p {
   box-shadow: 0 0 0 rgba(0,0,0,0.5);
 }
 
-.img-responsive {
-  opacity: 0.7;
+.image-container {
+  overflow: hidden;
 }
 
+.image-container img {
+  opacity: 0.7;
+  transition: all 0.5s ease;
+  width: 100%;
+}
+
+.image-container img:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
 
 /* Header section */
 
@@ -77,6 +87,27 @@ nav {
 
 .jumbotron-bike {
   background: url("../images/jumbotron-bike.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron-beer {
+  background: url("../images/jumbotron-beer.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron-flowers {
+  background: url("../images/jumbotron-flowers.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron-duffel {
+  background: url("../images/jumbotron-duffel.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
